--- a/Struts/Struts2ExampleN03-web/src/main/webapp/WEB-INF/web.xml
+++ b/Struts/Struts2ExampleN03-web/src/main/webapp/WEB-INF/web.xml
@@ -14,8 +14,18 @@
         </init-param>
     </filter>
 
+    <filter>
+        <filter-name>OpenSessionInViewFilter</filter-name>
+        <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+    </filter>
+
     <filter-mapping>
         <filter-name>struts2</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>OpenSessionInViewFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
