--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>JQuery</module>
         <module>Logging</module>
         <module>MyBatis</module>
+        <module>Portlet</module>
         <module>Security</module>
         <module>Struts</module>
         <module>Vaadin</module>
@@ -51,6 +52,12 @@
                 <groupId>jstl</groupId>
                 <artifactId>jstl</artifactId>
                 <version>1.2</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.portlet</groupId>
+                <artifactId>portlet-api</artifactId>
+                <version>2.0</version>
                 <scope>provided</scope>
             </dependency>
 
