--- a/Spring/Integration/pom.xml
+++ b/Spring/Integration/pom.xml
@@ -13,6 +13,7 @@
         <module></module>
         <module>spring-integration-01</module>
         <module>spring-integration-02</module>
+        <module>spring-integration-03</module>
     </modules>
 
 </project>
