--- a/WebServices/JAX_WS/SimpleWebService/SimpleWebService-client/pom.xml
+++ b/WebServices/JAX_WS/SimpleWebService/SimpleWebService-client/pom.xml
@@ -6,7 +6,7 @@
         <groupId>edu.javacourse</groupId>
         <artifactId>examples</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../../</relativePath>
+        <relativePath>../../../../</relativePath>
     </parent>
 
     <groupId>edu.javacourse.web-services</groupId>
