--- a/Logging/slf4j/pom.xml
+++ b/Logging/slf4j/pom.xml
@@ -2,16 +2,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.javacourse</groupId>
-    <artifactId>logging</artifactId>
+    <groupId>edu.javacourse.logging</groupId>
+    <artifactId>slf4j</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Logging</name>
+    <name>Logging SLF4J</name>
 
     <modules>
-        <module>log4j</module>
-        <module>slf4j</module>
+        <module>slf4j-source</module>
+        <module>slf4j-target</module>
     </modules>
 
 </project>
