--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -18,6 +18,7 @@
         <module>part1/hibernate-crud</module>
         <module>part2/hibernate-column-transformer</module>
         <module>part2/hibernate-second-level-cache</module>
+        <module>part2/hibernate-inheritance-joined</module>
     </modules>
 
 </project>
