--- a/EJB/stateless-ejb-local-remote/war-client/pom.xml
+++ b/EJB/stateless-ejb-local-remote/war-client/pom.xml
@@ -34,6 +34,7 @@
             <groupId>edu.javacourse.ejb</groupId>
             <artifactId>ejb-lib-module</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
