--- a/EJB/stateless-ejb-local-remote/war-ejb/pom.xml
+++ b/EJB/stateless-ejb-local-remote/war-ejb/pom.xml
@@ -34,6 +34,7 @@
             <groupId>edu.javacourse.ejb.stateless-ejb-local-remote</groupId>
             <artifactId>lib</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
