--- a/WebServices/pom.xml
+++ b/WebServices/pom.xml
@@ -11,13 +11,13 @@
 
     <modules>
         <module>JAX_WS/SimpleWebService</module>
-        <module>WEB-REST/rest-exceptions</module>
-        <module>WEB-REST/rest-params-response</module>
-        <module>WEB-REST/rest-download-files</module>
-        <module>WEB-REST/rest-produces-xml</module>
-        <module>WEB-REST/rest-produces-json</module>
-        <module>WEB-REST/rest-context</module>
-        <module>WEB-REST/rest-scope</module>
+        <module>JAX-RS/rest-exceptions</module>
+        <module>JAX-RS/rest-params-response</module>
+        <module>JAX-RS/rest-download-files</module>
+        <module>JAX-RS/rest-produces-xml</module>
+        <module>JAX-RS/rest-produces-json</module>
+        <module>JAX-RS/rest-context</module>
+        <module>JAX-RS/rest-scope</module>
     </modules>
 
 </project>
