--- a/Concurrency/managed-scheduled-executor-service/pom.xml
+++ b/Concurrency/managed-scheduled-executor-service/pom.xml
@@ -21,6 +21,10 @@
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
