--- a/Spring/Integration/pom.xml
+++ b/Spring/Integration/pom.xml
@@ -18,6 +18,9 @@
         <module>spring-integration-06</module>
         <module>spring-integration-07</module>
         <module>spring-integration-08</module>
+        <module>spring-integration-09</module>
+        <module>spring-integration-10</module>
+        <module>spring-integration-11</module>
     </modules>
 
 </project>
