--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <spring.version>4.1.1.RELEASE</spring.version>
         <hibernate.version>4.3.7.Final</hibernate.version>
         <zk.version>7.0.3</zk.version>
+        <spring-integration.version>4.1.0.RELEASE</spring-integration.version>
     </properties>
 
     <dependencyManagement>
@@ -237,12 +238,27 @@
             <dependency>
                 <groupId>org.springframework.integration</groupId>
                 <artifactId>spring-integration-core</artifactId>
-                <version>4.1.0.RELEASE</version>
+                <version>${spring-integration.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.integration</groupId>
                 <artifactId>spring-integration-xmpp</artifactId>
-                <version>4.1.0.RELEASE</version>
+                <version>${spring-integration.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.integration</groupId>
+                <artifactId>spring-integration-mail</artifactId>
+                <version>${spring-integration.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.integration</groupId>
+                <artifactId>spring-integration-ws</artifactId>
+                <version>${spring-integration.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.integration</groupId>
+                <artifactId>spring-integration-xml</artifactId>
+                <version>${spring-integration.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
