--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,11 @@
                 <version>3.0.10.Final</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.2.2</version>
+            </dependency>
 
             <!-- Spring -->
             <dependency>
