--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,11 @@
                 <artifactId>spring-integration-xml</artifactId>
                 <version>${spring-integration.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.ws</groupId>
+                <artifactId>spring-ws-core</artifactId>
+                <version>2.2.4.RELEASE</version>
+            </dependency>
 
             <!-- Camel -->
             <dependency>
